<resources>
    <string name="app_name">FitnessSensors</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_pre_made">PreMade</string>
    <string name="premade">PreMade</string>
    <string name="txtNew">New</string>
    <string name="current">Current</string>
    <string name="saved">Saved</string>
    <string name="add_device">Add Device</string>
    <string name="metrics">Metrics</string>
    <string name="title_activity_leg">Leg</string>
    <string name="title_activity_squat">Squat</string>
    <string name="title_activity_new2">Lower</string>
    <string name="title_activity_new_one">New</string>
    <string name="title_activity_new3_quad">Quad</string>
    <string name="title_activity_new4_squat">Squat</string>
    <string name="title_activity_current1">Current</string>
    <string name="title_activity_current2">Squat</string>
    <string name="title_activity_saved1">Saved</string>
    <string name="title_activity_saved2">Mon/Wed</string>
    <string name="title_activity_saved3">Squat</string>
    <string name="title_activity_add_knee_sleeve">Knee Sleeve</string>
    <string name="title_activity_add_new_device">Add Device</string>
    <string name="title_activity_add_pair">Pair</string>
    <string name="title_activity_add_calibrate">Calibrate</string>
    <string name="title_activity_metrics">Metrics</string>
    <string name="title_activity_faqs">FAQs</string>
    <string name="title_activity_help">Help</string>
    <string name="action_settings">Settings</string>
</resources>
